# github-cmake-practice

./: CMakeLists.txt  lib.cpp  main.cpp
.github/workflows/: cmake-multi-platform.yml
